[package]
name = "fc-cli"
version = "1.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Frontier database backend"
repository = "https://github.com/futureversecom/frontier/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parity
ethereum-types = "0.13.1"

# Substrate
sc-cli = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait", features = ["wasmtime"] }
sc-service = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait", features = ["wasmtime"] }
sp-api = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait" }
sp-runtime = { version = "6.0.0", git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait" }

# Frontier
fc-db = { path = "../db" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }

[dev-dependencies]
futures = "0.3.21"
tempfile = "3.3.0"
# Parity
codec = { package = "parity-scale-codec", version = "3.0.0" }
# Substrate
sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait" }
sc-client-db = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait" }
sp-io = { version = "6.0.0", git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait" }
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/futureversecom/substrate", branch = "trn-tx-fees-trait" }
# Frontier
frontier-template-runtime = { path = "../../template/runtime" }
