[package]
name = "frontier-template-node"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2021"
license = "Unlicense"
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
clap = { version = "3.2", features = ["derive"] }
futures = "0.3.21"
log = "0.4.17"

# Parity
codec = { package = "parity-scale-codec", version = "3.1", features = ["derive"] }
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }

# Substrate
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", features = ["wasmtime"] }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", optional = true }
sc-consensus-manual-seal = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", optional = true }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", features = ["wasmtime"] }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sp-core = { version = "6.0.0", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sp-keyring = { version = "6.0.0", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sp-runtime = { version = "6.0.0", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
# These dependencies are used for RPC
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }
pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }

# Frontier
fc-cli = { path = "../../client/cli" }
fc-consensus = { path = "../../client/consensus" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }
fc-rpc = { path = "../../client/rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }
fp-consensus = { path = "../../primitives/consensus" }
fp-dynamic-fee = { path = "../../primitives/dynamic-fee" }
fp-evm = { path = "../../primitives/evm" }
fp-rpc = { path = "../../primitives/rpc" }
fp-storage = { path = "../../primitives/storage" }

frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }

[features]
default = ["aura", "with-rocksdb-weights"]
aura = [
	"sc-consensus-aura",
	"frontier-template-runtime/aura",
]
manual-seal = [
	"sc-consensus-manual-seal",
	"frontier-template-runtime/manual-seal",
]
with-rocksdb-weights = ["frontier-template-runtime/with-rocksdb-weights"]
with-paritydb-weights = ["frontier-template-runtime/with-paritydb-weights"]
rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = ["frontier-template-runtime/runtime-benchmarks"]
